# Drift

./: .env.example  .gitignore  README.md  implementation plan.md  pyproject.toml
.github/: copilot-instructions.md
config/: active_instrument.json  prompts.yaml  settings.yaml
src/drift/: __init__.py  __main__.py  app.py  cli.py  models.py
src/drift/ai/: __init__.py  client.py  mock_client.py  position_advisor.py  prompt_builder.py  response_parser.py
src/drift/brokers/: __init__.py  gateway_launcher.py  ib_client.py  order_builder.py  position_manager.py
src/drift/config/: __init__.py  models.py
src/drift/data/: __init__.py
src/drift/features/: __init__.py  base.py  engine.py  momentum.py  (+6 more)
src/logs/: events.jsonl
tests/: test_backfill.py  test_calendar_gate.py  test_config.py  test_cooldown_gate.py  test_gate_runner.py  test_gateway_launcher.py  test_gui_components.py  test_gui_phase10c.py  test_gui_phase10d.py  test_kill_switch_gate.py  test_logger.py  test_mock_client.py  test_news_gate.py  test_order_blocks.py  test_order_builder.py  test_pending_order_store.py  test_performance_context.py  test_phase12.py  test_planning_engines.py  test_position_advisor.py  test_position_manager.py  test_position_store.py  test_post_close_cycle.py  test_prompt_builder.py  test_regime_gate.py  test_replay.py  test_replay_chart.py  test_replay_outcome.py  test_response_parser.py  test_session_gate.py  test_signal_store.py  test_storage_reader.py  test_sweep_strategy.py  test_thesis_window.py  test_trade_resolution.py  test_trade_store.py  test_volume_imbalance.py
(+67 files in other folders)
